--- a/style.css
+++ b/style.css
@@ -300,6 +300,18 @@
     margin-bottom: 5%;
 }
 
+.p1 {
+    padding: 2%;
+}
+
+.p2 {
+    padding: 2%;
+}
+
+.p3 {
+    padding: 2%;
+}
+
 
 /* Footer */
 
@@ -315,14 +327,6 @@
 
 /* screen size */
 @media only screen and (max-width: 480px) {
-    #header-right {
-        display: none;
-    }
-    
-    .side-bar {
-        display: none;
-    }
-    
     .light-font {
         display: none;
     }
@@ -350,10 +354,14 @@
     .time {
         display: none;
     }
-    
-     #menu h2 {
+
+    #menu h2 {
         font-size: smaller;
         font-weight: 300;
+    }
+
+    #email {
+        display: none;
     }
 }
 
@@ -388,6 +396,10 @@
     }
 
     .time {
+        display: none;
+    }
+
+    #email {
         display: none;
     }
 }
@@ -426,6 +438,10 @@
     }
 
     .time {
+        display: inline;
+    }
+
+    #email {
         display: inline;
     }
 }
